--- a/_posts/2016-02-25-intro.md
+++ b/_posts/2016-02-25-intro.md
@@ -4,6 +4,6 @@ published: true
 
 
 ## Indian Panther is finally here.
-Well we are here. The Social Journalism is now open to show its face every where and at every place. ![Indian Panther]({{site.baseurl}}/_posts/loginlogo.png)
+Well we are here. The Social Journalism is now open to show its face every where and at every place. ![Indian Panther]({{site.baseurl}}_posts/loginlogo.png)
 
 Lets see how it goes now!
