--- a/_posts/2016-02-25-intro.md
+++ b/_posts/2016-02-25-intro.md
@@ -5,6 +5,7 @@ author: "Radha Krishna"
 avatar: "img/authors/radha.jpg"
 image: "img/capture.PNG"
 date:   2016-02-25 19:12:12
+published:true
 ---
 
 
